2016-11-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* Changes: Added a file to keep track of major changes between releases.

2016-11-17  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/math/common.py(calculate_precisely):

	- Add reference to old numpy bug that makes this necessary

	* typhon/datasets/dataset.py(Dataset.read):

	- Change syntax for my_pseudo_fields such that it can have
	dependencies on other fields and pseudo_fields, which are then read as
	well.

2016-11-15  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/math/common.py:

	(promote_maximally): Promote ndarrays to their maximal precision, i.e.
	ints to i8, floats to f8, etc.  Works for int, float, uint.  Designed
	to be used with calculate_precisely.

	(calculate_precisely): Wrapper to promote all ndarray arguments of a
	function to their maximal precision.  Useful when you are losing
	precision in your mathematical calculations and there is no
	straightforward way of preventing this by rewriting the algorithm.

2016-11-15  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(Dataset.read): Support either single- or
	double-argument pseudofield function

	* typhon/datasets/tovs.py:

	(TOVSCollocatedDataset): New mixin class for any collocated dataset
	involving scanlines.

	(TOVSCollocatedDataset.combine): Make sure we use column information
	to select right column from exact matchup.

	(HIRSHIRS.combine): Pass right instructions to parent class.

2016-11-15  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/tests/test_matpack_types.py:

	Test the behaviour when reading and writing zipped XML files.

2016-11-15  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py:

	Fixed check for '.gz' file ending. Exception is thrown if one attends to
	save a zipped file in binary format.

	Use 'wt' mode when opening files to fix the writing of gzipped files.

2016-11-10  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py:
	
	(HIRS):
